2009-09-09 r138 Issue #104 Add a CHANGELOG file

2009-09-09 r139 Issue #102 Add Ticket CC's
Add rudimentary CC: functionality on tickets, controlled by staff users. CC's 
can be e-mail addresses or users, who will receive copies of all emails sent 
to the Submitter. This is a work in progress.

2009-09-09 r140 Issue #13 Add Tags to tickets
Patch courtesy of david@zettazebra.com, adds the ability to add tags to 
tickets if django-tagging is installed and in use. If django-tagging isn't 
being used, no change is visible to the user.

2009-10-13 r141 Issue #118 Incorrect locale handling on email templates
Patch courtesy of hgeerts. Corrects the handling of locale on email 
templaets, defaulting to English if no locale is provided.

2009-10-13 r142 Issue #117 Incorrect I18N usage in a few spots
Patch thanks to hgeerts.

2009-10-13 r143 Issue #113 - Clicking Queue names on the Dashboard was showing
all tickets; now only shows open tickets. Thanks to Andreas Kotowicz for the 
sugestion.

2009-12-16 r144 Issue #122 - Infinite loop when most recent ticket was 
opened in December. Thanks to Chris Vigelius for the report.

2009-12-16 r145 issue #123 - Google Chart doesn't show when there is a large
volume of data in the system. This patch restricts the chart to 1000px wide.

2009-12-16 r146 Issue #121 Formatting fix for email subjects. Thanks, 
Andreas Kotowicz.